POC-template/query/thanos-query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: query-layer
    app.kubernetes.io/instance: thanos-query
    app.kubernetes.io/name: thanos-query
    app.kubernetes.io/version: v0.32.5
  name: thanos-query
  namespace: thanos
spec:
  replicas: 6
  selector:
    matchLabels:
      app.kubernetes.io/component: query-layer
      app.kubernetes.io/instance: thanos-query
      app.kubernetes.io/name: thanos-query
  template:
    metadata:
      labels:
        app.kubernetes.io/component: query-layer
        app.kubernetes.io/instance: thanos-query
        app.kubernetes.io/name: thanos-query
        app.kubernetes.io/version: v0.32.5
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - thanos-query
              namespaces:
              - thanos
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - query
        - --grpc-address=0.0.0.0:10901
        - --http-address=0.0.0.0:9090
        - --log.level=debug
        - --log.format=logfmt
        - --query.replica-label=prometheus_replica
        - --query.replica-label=rule_replica
        # - --endpoint=dnssrv+_grpc._tcp.thanos-receive.thanos.svc.cluster.local
        # - --endpoint=dnssrv+_grpc._tcp.thanos-rule.thanos.svc.cluster.local
        # - --endpoint=dnssrv+_grpc._tcp.thanos-sidecar.thanos.svc.cluster.local
        #- --endpoint=dnssrv+_grpc._tcp.thanos-store.thanos.svc.cluster.local
        # for store
        - --endpoint=dnssrv+_grpc._tcp.thanos-store-cluster1.thanos.svc.cluster.local
        - --endpoint=dnssrv+_grpc._tcp.thanos-store-cluster2.thanos.svc.cluster.local
        - --endpoint=dnssrv+_grpc._tcp.thanos-store-cluster3.thanos.svc.cluster.local
        # for sidecar
        - --endpoint=thanos-sidecar-${CLUSTER_NAME_1}.${DOMAIN_NAME}:10901
        - --endpoint=thanos-sidecar-${CLUSTER_NAME_2}.${DOMAIN_NAME}:10901
        # - --endpoint=k8s-monitori-promoper-xxx.elb.us-east-2.amazonaws.com:10901
        # for receive
        - --endpoint=dnssrv+_grpc._tcp.thanos-receive-cluster2.thanos.svc.cluster.local
        - --endpoint=dnssrv+_grpc._tcp.thanos-receive-cluster3.thanos.svc.cluster.local
        # - --endpoint=k8s-thanos-thanosre-xxx.elb.us-east-2.amazonaws.com:10901
        - --query.timeout=5m
        - --query.lookback-delta=15m
        - |-
          --tracing.config="config":
            "sampler_param": 2
            "sampler_type": "ratelimiting"
            "service_name": "thanos-query"
          "type": "JAEGER"
        - --query.auto-downsampling
        image: quay.io/thanos/thanos:v0.32.5
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /-/healthy
            port: 9090
            scheme: HTTP
          periodSeconds: 30
        name: thanos-query
        ports:
        - containerPort: 10901
          name: grpc
        - containerPort: 9090
          name: http
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /-/ready
            port: 9090
            scheme: HTTP
          periodSeconds: 5
        resources:
          limits:
            cpu: 1
            memory: 512Mi
          requests:
            cpu: 0.25
            memory: 256Mi        
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePolicy: FallbackToLogsOnError
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 65534
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: thanos-query
      terminationGracePeriodSeconds: 120
