POC-template/query/thanos-query-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: query-cache
    app.kubernetes.io/instance: thanos-query-frontend
    app.kubernetes.io/name: thanos-query-frontend
    app.kubernetes.io/version: v0.32.5
  name: thanos-query-frontend
  namespace: thanos
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: thanos-query-frontend.${DOMAIN_NAME}
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 9090
    targetPort: 9090
  selector:
    app.kubernetes.io/component: query-cache
    app.kubernetes.io/instance: thanos-query-frontend
    app.kubernetes.io/name: thanos-query-frontend
