POC-template/query/thanos-query-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-frontend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 9090}]'
  namespace: thanos
spec:
  ingressClassName: alb
  rules:
    - host: thanos-query-frontend-ingress.xxx
      http:
        paths:
          - backend:
              service:
                name: thanos-query-frontend
                port:
                  number: 9090
            path: /
            pathType: Prefix
